--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="/css/style.css" class="css">
-    <link rel="stylesheet" href="/css/utility.css">
+    <link rel="stylesheet" href="style.css" class="css">
+    <link rel="stylesheet" href="utility.css">
 </head>
 
 <body>
@@ -42,14 +42,14 @@
             </div>
 
             <div class="profile">
-                <img src="/css/profile1_2.png">
+                <img src="profile1_2.png">
             </div>
 
 
         </div>
         <div class="main2">
             <div class="image">
-                <img src="/css/image_2.png">
+                <img src="image_2.png">
             </div>
             <div class="about-me">
                 <h2>About Me</h2>
@@ -119,8 +119,8 @@
             </div>
             <div class="footer-img>">
                <a href="https://www.instagram.com/ronak_harbala/" target="_main"><img src="https://i.pinimg.com/736x/a1/32/c0/a132c08bbe549746e5cb1b3be98ca58b.jpg">  </a> 
-                <a href="https://web.whatsapp.com/" target="_main"><img src="/css/whats.png"></a>
-                <a href="https://www.linkedin.com/feed/" target="_main"><img src="/css/link.png"></a>
+                <a href="https://web.whatsapp.com/" target="_main"><img src="whats.png"></a>
+                <a href="https://www.linkedin.com/feed/" target="_main"><img src="link.png"></a>
             </div>
             <h5>Copyright &copy; Ronak Harbala All Rights Reserved</h5>
         </div>
